# elevator

./: README.md
ROS2_pkg/simple_elevator/: CMakeLists.txt  package.xml
ROS2_pkg/simple_elevator/action/: Go.action
ROS2_pkg/simple_elevator/launch/: simple_elevator_launch.py
ROS2_pkg/simple_elevator/msg/: Geometry.msg  Order.msg  Scheduled.msg  State.msg
ROS2_pkg/simple_elevator/src/: GUI.py  HW_interface.py  android_interface.py  scheduler.py
android/: server.py
arduino/HW_controller/: HW_controller.ino
media/: components - Lowest.csv  components.csv  components.xlsx  nots.txt
